...
        }
    }
    
    var title: String {
        switch self {
        case .myList:
            return "My Lists"
        case .favourite:
            return "Favorite"
        case .watchList:
            return "Watchlist"
        case .rate:
            return "Rate"
...
